# Projekt_ArtysciProgramisici

./: .gitignore  CMakeLists.txt  README.md
program/: main.cpp
test/: CartTest.cpp  ClientTest.cpp  FileOperationsTest.cpp  ManagersTest.cpp  MerchandiseTest.cpp  OrderTest.cpp  TestClient.cpp  master.cpp
